--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -1,45 +1,46 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  text-align: center;
-  }
-  
-  .connect{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.connect {
     position: absolute;
     right: 50px;
     top: 50px;
-  }
+}
 
-  .box{
-    display:flex;
+.box {
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
     border: 1px solid black;
     border-radius: 4px;
     width: 800px;
-    height: 1000px;
+    height: 500px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
     padding: 20px;
 }
 
-  .main {
+.main {
     display: flex;
     justify-content: space-between;
     padding: 175px;
     align-items: center;
     width: 600px;
     height: 350px;
-    background-color:gainsboro;
+    background-color: gainsboro;
     border: 2px solid black;
     border-radius: 15px;
     margin-bottom: 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  
-  .footer {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -48,52 +49,52 @@
     border-top: 1px solid #eaeaea;
     justify-content: center;
     align-items: center;
-  }
-  
-  .footer a {
+}
+
+.footer a {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-  }
-  
-  .title a {
+}
+
+.title a {
     color: #0d76fc;
     text-decoration: none;
-  }
-  
-  .title a:hover,
-  .title a:focus,
-  .title a:active {
+}
+
+.title a:hover,
+.title a:focus,
+.title a:active {
     text-decoration: underline;
-  }
-  
-  .title {
+}
+
+.title {
     margin: 3rem 0;
     line-height: 1;
     font-size: 2.5rem;
-  }
-  
-  .title,
-  .description {
+}
+
+.title,
+.description {
     text-align: center;
-  }
-  
-  .description {
+}
+
+.description {
     margin: 0 0 2rem;
     line-height: 1.5;
     font-size: 1.5rem;
-  }
-  
-  .grid {
+}
+
+.grid {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 800px;
-  }
-  
-  .card {
+}
+
+.card {
     margin: 1rem;
     padding: 1.5rem;
     text-align: left;
@@ -103,68 +104,116 @@
     border-radius: 10px;
     transition: color 0.15s ease, border-color 0.15s ease;
     max-width: 350px;
-  }
-  
-  .card:hover,
-  .card:focus,
-  .card:active {
+}
+
+.card:hover,
+.card:focus,
+.card:active {
     color: #0d76fc;
     border-color: #0d76fc;
-  }
-  
-  .card h2 {
+}
+
+.card h2 {
     margin: 0 0 1rem 0;
     font-size: 1.2rem;
-  }
-  
-  .card p {
+}
+
+.card p {
     margin: 0;
     font-size: 1.2rem;
     line-height: 1.5;
-  }
-  
-  @media (max-width: 600px) {
+}
+
+@media (max-width: 600px) {
     .grid {
-      width: 100%;
-      flex-direction: column;
+        width: 100%;
+        flex-direction: column;
     }
-  }
+}
 
 .buttony {
-  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  flex-shrink: 0;
-  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  height: 4rem;
-  padding: 0 1.6rem;
-  text-align: center;
-  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-  transition: all .5s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+    background-image: linear-gradient(
+        92.88deg,
+        #455eb5 9.16%,
+        #5643cc 43.89%,
+        #673fd7 64.72%
+    );
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    height: 4rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all 0.5s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.inputbox {
+    background-image: linear-gradient(
+        92.88deg,
+        #455eb5 9.16%,
+        #5643cc 43.89%,
+        #673fd7 64.72%
+    );
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    height: 5rem;
+    padding: 0 1.6rem;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all 0.5s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-right: 350px;
+    margin-left: 50px;
 }
 
 .buttony:hover {
-  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
+    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+    transition-duration: 0.1s;
 }
 
 @media (min-width: 768px) {
-  .buttony {
-    padding: 0 2.6rem;
-  }
+    .buttony {
+        padding: 0 2.6rem;
+    }
 }
 
 .buttonwrapper {
-  justify-content: center;
-  display:flex;
-  gap: 100px;
-  margin-bottom: 50px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+
+    gap: 100px;
+    margin-bottom: 50px;
+}
+
+.buttonwrapperleft {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    gap: 20px;
+    margin-left: 550px;
 }
